--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -33,6 +33,9 @@
                     <img src="/assets/images/ui-assets/ring.png" style="height: 60px;">
                 </a>
             </li>
+           <li class="nav-item disktop-hide" style="float: right !important; margin-top: -15px;"><a href="#" class="nav-link">
+               <img src="/assets/images/ui-assets/menu-icon.png" style="height: 50px;" />
+           </a></li>
            <!-- <li class="nav-item"><a href="#" class="nav-link">Home</a></li> -->
         </ul>
     </div>
