--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -402,7 +402,7 @@
                 <h1 class="title-lg">JOIN THE JOURNEY</h1>
             </div>
         </div>
-        <div class="culture">
+        <!-- <div class="culture">
             <div class="example-collection-grid culture-sm" >
                 <div class="example-collection-cell cornor-image">
                     <div class="example-collection-item" >
@@ -414,29 +414,36 @@
                             <a class="left-image-text-btn culture-btn create-with-us" href="javascript:void(0);">Create with us<img  class="create-img" src="/assets/images/ui-assets/black-arrow.png"/></a>
                             <a class="left-image-text-btn culture-btn join-our-discord"href="javascript:void(0);">Join our Discord<img src="/assets/images/ui-assets/black-arrow.png"/></a>
                         </div>
-                        
-
-                  
-                      
-                   
                 </div>
                 
-            </div>
-            <div class="example-collection-cell">
-                <div class="example-collection-item" >
-                    <div class="cluture-image-women">
-
+             </div>
+                <div class="example-collection-cell">
+                    <div class="example-collection-item" >
+                        <div class="cluture-image-women">
+                        </div>
                     </div>
-                
+                </div>
+             </div>
+        </div> -->
+        <div class="culture-1">
+            <div class="culture-left">
+                <div class="culture-title-container">
+                    <h1 class="culture-title" style="color: white;">MOVE CULTURE FORWARD TOGETHER</h1>
+                </div>
+                <div class="culture-text-container">
+                    <p class="culture-subtitle">Apply to be part of the most exclusive members club of the metaverse and gain access to events.</p>
+                </div>
+                <div class="culture-buttons">
+                    <a class="left-image-text-btn culture-btn create-with-us" href="javascript:void(0);">Create with us<img  class="create-img" src="/assets/images/ui-assets/black-arrow.png"/></a>
+                    <a class="left-image-text-btn culture-btn join-our-discord"href="javascript:void(0);">Join our Discord<img src="/assets/images/ui-assets/black-arrow.png"/></a>
+                </div>
 
-              
-                  
-               
             </div>
-            
+            <div class="culture-right">
+                <!-- <div style="background-image: url('/assets/images/ui-assets/culture-women.png');"></div> -->
+                <img class="mobile" src="/assets/images/ui-assets/culture-women.png" />
+            </div>
         </div>
-        </div>
-</div>
         <div>
             <div class="container title-container">
                 <h1 class="title-sm">DOWNLOAD</h1>
