--- a/src/app/pages/muse/components/muse/muse.component.html
+++ b/src/app/pages/muse/components/muse/muse.component.html
@@ -3,8 +3,7 @@
         <div class="nav-container">
             <ul class="nav">
                 <li class="nav-item"> 
-                    <a href="javascript:void(0);" class="nav-link">
-                        
+                    <a routerLink="/" class="nav-link">
                         <img src="assets/images/ui-assets/Lockup.png" class="logo-stageverse" alt="Logo" />
                     </a> 
                 </li>
